Bug 461379 - "Play Disc" is clickable but does nothing when DVD support isn't installed
Summary: "Play Disc" is clickable but does nothing when DVD support isn't installed
Status: RESOLVED FIXED
Alias: None
Product: dragonplayer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2022-11-03 21:42 UTC by Nate Graham
Modified: 2022-11-25 17:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2022-11-03 21:42:49 UTC
The UI doesn't show anything, but the CLI log output says this:

libdvdread: Encrypted DVD support unavailable.
libdvdread: Can't stat /dev/dvd
No such file or directory
libdvdread: Could not open /dev/dvd

The user can't be expected to read that though. When DVD support isn't available, we need to either tell the user about it in the UI, or disable.hide functionality that won't work without it.
Comment 1 Harald Sitter 2022-11-25 17:44:31 UTC
Git commit d0ea7aaa88f97c8e1a541c1c2a147ceabf725415 by Harald Sitter.
Committed on 25/11/2022 at 12:44.
Pushed by sitter into branch 'master'.

hide play disc when the system has no disc drive

M  +3    -0    src/app/mainWindow.cpp

https://invent.kde.org/multimedia/dragon/commit/d0ea7aaa88f97c8e1a541c1c2a147ceabf725415