hide play disc when the system has no disc drive

BUG: 461379